fix: bool list spacing

--- a/frontend/components/FieldBoolean/FieldBoolean.css
+++ b/frontend/components/FieldBoolean/FieldBoolean.css
@@ -8,6 +8,7 @@
   border: 1px solid #ccc;
   vertical-align: middle;
   margin-right: 8px;
+  margin-top: -2px;
 }
 .enabled:before {
   border-color: var(--theme-colour-save);
